# youbot_controller

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  deploy.sh  onnx_downlad.sh  youbot_toolchain.cmake
ControlApp/: CMakeLists.txt  comandor_thread.cpp  comandor_thread.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  planner.h  protocol.h  stream_thread.cpp  stream_thread.h
ControlApp/lib/: CMakeLists.txt
config/: youbot-ethercat.cfg  youbot_config.yaml
include/yolo/det/: YOLO10.hpp
include/yolo/tools/: Debug.hpp  ScopedTimer.hpp
include/youbot_lidar_nav/: driver.hpp  lidar.hpp  logger.hpp  parameter_server.hpp  protocol.hpp  tcp_server.hpp
include/youbot_lidar_nav/tasks/: driver_task.hpp  lidar_task.hpp  planner_task.hpp  streamer_task.hpp  tcp_server_task.hpp
include/youbot_lidar_nav/utils/: command_server.hpp  logger.hpp  parameter_server.hpp  task_pool.hpp  task_thread.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  driver.cpp  lidar.cpp  logger.cpp  main.cpp  parameter_server.cpp  tcp_server.cpp  youbot_lidar_nav.cpp
src/tasks/: driver_task.cpp  lidar_task.cpp  planner_task.cpp  streamer_task.cpp  tcp_server_task.cpp
src/utils/: command_server.cpp  logger.cpp  parameter_server.cpp  task_pool.cpp  task_thread.cpp
